--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Homework - 5 
+# Trompoukis Athanasios
+# Lede Program / Columbia Journalism School
